--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,6 @@
     gpgcheck: yes
     repo_gpgcheck: yes
     gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-
 - name: Installing needed packages
   package:
     name: "{{ item }}"
@@ -18,7 +17,6 @@
     - "kubeadm"
     - "docker"
     - "iproute-tc"
-
 - name: Enable docker and kubectl services 
   service:
     name: "{{ item }}"
@@ -27,31 +25,23 @@
   loop:
     - kubelet
     - docker
-
 - name: Pulling docker images for cluster
   command: kubeadm config images pull
-
 - name: updating systemd driver
   copy:
     dest: /etc/docker/daemon.json
     src: daemon.json
-
 - name: restarting docker services
   service:
     name: docker
     state: restarted
-
-
 - name: initialising kubeadm
-  shell: 
-    cmd: "kubeadm init --pod-network-cidr=10.244.0.0/16 --iignore-preflight-errors=NumCPU --ignore-preflight-errors=Mem"
+  shell: "kubeadm init --pod-network-cidr=10.244.0.0/16 --iignore-preflight-errors=NumCPU --ignore-preflight-errors=Mem"
   ignore_errors: yes
-
 - name: creating .kube directory
   file:
     path: $HOME/.kube
     state: directory
-
 - name: Duplicate Folder Deletion
   file:
         path: "$HOME/.kube/config"
@@ -60,21 +50,15 @@
 - name: commands
   shell:
       cmd: "{{ item.command }}"
-
   loop:
-  - {   command: "cp -i /etc/kubernetes/admin.conf $HOME/.kube/config"   }
-  - {   command: "sudo chown $(id -u):$(id -g) $HOME/.kube/config"   }
+  - { command: "cp -i /etc/kubernetes/admin.conf $HOME/.kube/config" }
+  - { command: "sudo chown $(id -u):$(id -g) $HOME/.kube/config" }
 - name: setup flannel
-  shell:
-          cmd:  "kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml"  
+  shell: "kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml"  
   ignore_errors: yes
-
 - name: Creating Token for worker node
-  shell:
-    cmd: "kubeadm token create --print-join-command"
+  shell: "kubeadm token create --print-join-command"
   register: token
-   
-
 - name: Save the token in local file
   local_action: copy content={{ token.stdout }} dest=./token.txt
 
