--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Umesh Tyagi
+  description: This role help to set up kubernetes master node in kubernetes cluster
+  company: 
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
