--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,8 +7,8 @@ galaxy_info:
   # next line and provide a value
   # issue_tracker_url: http://example.com/issue/tracker
 
-  # Choose a valid license ID from https://spdx.org - some suggested licenses:
-  # - BSD-3-Clause (default)
+  Choose a valid license ID from https://spdx.org - some suggested licenses:
+  - BSD-3-Clause (default)
   # - MIT
   # - GPL-2.0-or-later
   # - GPL-3.0-only
@@ -27,17 +27,17 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+   platforms:
+   - name: Fedora
+     versions:
+     - all
+     - 25
+   - name: SomePlatform
+     versions:
+     - all
+     - 1.0
+     - 7
+     - 99.99
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
